Change java version for core module